Leverage Java-11's Set.of() (#1033)
* Leverage Java-11's Set.of()