@@ -192,11 +192,11 @@ public class ImmutableValueGraphAdapterTest
         EndpointPair<String> e44 = EndpointPair.ordered("v4", "v4");
         EndpointPair<String> e52 = EndpointPair.ordered("v5", "v2");
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52), g.edgesOf("v5"));
 
         assertEquals(0, g.inDegreeOf("v1"));
         assertEquals(2, g.inDegreeOf("v2"));
@@ -204,11 +204,11 @@ public class ImmutableValueGraphAdapterTest
         assertEquals(2, g.inDegreeOf("v4"));
         assertEquals(0, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(2, g.outDegreeOf("v2"));
@@ -216,11 +216,11 @@ public class ImmutableValueGraphAdapterTest
         assertEquals(1, g.outDegreeOf("v4"));
         assertEquals(1, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e23, e24)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e23, e24), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52), g.outgoingEdgesOf("v5"));
 
         // test indeed immutable
         try {
@@ -315,11 +315,11 @@ public class ImmutableValueGraphAdapterTest
         EndpointPair<String> e44 = EndpointPair.ordered("v4", "v4");
         EndpointPair<String> e52 = EndpointPair.ordered("v5", "v2");
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52), g.edgesOf("v5"));
 
         assertEquals(0, g.inDegreeOf("v1"));
         assertEquals(2, g.inDegreeOf("v2"));
@@ -327,11 +327,11 @@ public class ImmutableValueGraphAdapterTest
         assertEquals(2, g.inDegreeOf("v4"));
         assertEquals(0, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(2, g.outDegreeOf("v2"));
@@ -339,11 +339,11 @@ public class ImmutableValueGraphAdapterTest
         assertEquals(1, g.outDegreeOf("v4"));
         assertEquals(1, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e23, e24)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e23, e24), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52), g.outgoingEdgesOf("v5"));
 
     }
 
