@@ -89,11 +89,11 @@ public class MutableNetworkAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(5, g.degreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.edgesOf("v5"));
 
         assertEquals(0, g.inDegreeOf("v1"));
         assertEquals(2, g.inDegreeOf("v2"));
@@ -101,11 +101,11 @@ public class MutableNetworkAdapterTest
         assertEquals(2, g.inDegreeOf("v4"));
         assertEquals(2, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e55_1, e55_2)), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(e55_1, e55_2), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(3, g.outDegreeOf("v2"));
@@ -113,11 +113,11 @@ public class MutableNetworkAdapterTest
         assertEquals(1, g.outDegreeOf("v4"));
         assertEquals(3, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2, e24)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e23_1, e23_2, e24), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.outgoingEdgesOf("v5"));
     }
 
     /**
@@ -158,11 +158,11 @@ public class MutableNetworkAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(5, g.degreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.edgesOf("v5"));
 
         assertEquals(1, g.inDegreeOf("v1"));
         assertEquals(5, g.inDegreeOf("v2"));
@@ -170,12 +170,11 @@ public class MutableNetworkAdapterTest
         assertEquals(3, g.inDegreeOf("v4"));
         assertEquals(5, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.incomingEdgesOf("v1"));
-        assertEquals(
-            new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(5, g.outDegreeOf("v2"));
@@ -183,12 +182,11 @@ public class MutableNetworkAdapterTest
         assertEquals(3, g.outDegreeOf("v4"));
         assertEquals(5, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(
-            new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.outgoingEdgesOf("v5"));
     }
 
     /**
