@@ -87,44 +87,44 @@ public class SparseIntGraphTest
         assertEquals(3, g.degreeOf(0));
         assertEquals(3, g.inDegreeOf(0));
         assertEquals(3, g.outDegreeOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 4)), g.edgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 4)), g.incomingEdgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 4)), g.outgoingEdgesOf(0));
+        assertEquals(Set.of(0, 1, 4), g.edgesOf(0));
+        assertEquals(Set.of(0, 1, 4), g.incomingEdgesOf(0));
+        assertEquals(Set.of(0, 1, 4), g.outgoingEdgesOf(0));
 
         assertEquals(3, g.degreeOf(1));
         assertEquals(3, g.inDegreeOf(1));
         assertEquals(3, g.outDegreeOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(3, 4, 5)), g.edgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(3, 4, 5)), g.incomingEdgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(3, 4, 5)), g.outgoingEdgesOf(1));
+        assertEquals(Set.of(3, 4, 5), g.edgesOf(1));
+        assertEquals(Set.of(3, 4, 5), g.incomingEdgesOf(1));
+        assertEquals(Set.of(3, 4, 5), g.outgoingEdgesOf(1));
 
         assertEquals(2, g.degreeOf(2));
         assertEquals(2, g.inDegreeOf(2));
         assertEquals(2, g.outDegreeOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(1, 6)), g.edgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(1, 6)), g.incomingEdgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(1, 6)), g.outgoingEdgesOf(2));
+        assertEquals(Set.of(1, 6), g.edgesOf(2));
+        assertEquals(Set.of(1, 6), g.incomingEdgesOf(2));
+        assertEquals(Set.of(1, 6), g.outgoingEdgesOf(2));
 
         assertEquals(2, g.degreeOf(3));
         assertEquals(2, g.inDegreeOf(3));
         assertEquals(2, g.outDegreeOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5)), g.edgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5)), g.incomingEdgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5)), g.outgoingEdgesOf(3));
+        assertEquals(Set.of(2, 5), g.edgesOf(3));
+        assertEquals(Set.of(2, 5), g.incomingEdgesOf(3));
+        assertEquals(Set.of(2, 5), g.outgoingEdgesOf(3));
 
         assertEquals(3, g.degreeOf(4));
         assertEquals(3, g.inDegreeOf(4));
         assertEquals(3, g.outDegreeOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 3, 6)), g.edgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 3, 6)), g.incomingEdgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 3, 6)), g.outgoingEdgesOf(4));
+        assertEquals(Set.of(2, 3, 6), g.edgesOf(4));
+        assertEquals(Set.of(2, 3, 6), g.incomingEdgesOf(4));
+        assertEquals(Set.of(2, 3, 6), g.outgoingEdgesOf(4));
 
         assertEquals(1, g.degreeOf(5));
         assertEquals(1, g.inDegreeOf(5));
         assertEquals(1, g.outDegreeOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.edgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.incomingEdgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.outgoingEdgesOf(5));
+        assertEquals(Set.of(0), g.edgesOf(5));
+        assertEquals(Set.of(0), g.incomingEdgesOf(5));
+        assertEquals(Set.of(0), g.outgoingEdgesOf(5));
 
         assertEquals(Integer.valueOf(0), g.getEdgeSource(0));
         assertEquals(Integer.valueOf(5), g.getEdgeTarget(0));
@@ -193,30 +193,30 @@ public class SparseIntGraphTest
         assertEquals(7, g.degreeOf(0));
         assertEquals(7, g.inDegreeOf(0));
         assertEquals(7, g.outDegreeOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 3, 1, 4, 2)), g.edgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 3, 1, 4, 2)), g.incomingEdgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 3, 1, 4, 2)), g.outgoingEdgesOf(0));
+        assertEquals(Set.of(0, 3, 1, 4, 2), g.edgesOf(0));
+        assertEquals(Set.of(0, 3, 1, 4, 2), g.incomingEdgesOf(0));
+        assertEquals(Set.of(0, 3, 1, 4, 2), g.outgoingEdgesOf(0));
 
         assertEquals(5, g.degreeOf(1));
         assertEquals(5, g.inDegreeOf(1));
         assertEquals(5, g.outDegreeOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(1, 4, 5, 6)), g.edgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(1, 4, 5, 6)), g.incomingEdgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(1, 4, 5, 6)), g.outgoingEdgesOf(1));
+        assertEquals(Set.of(1, 4, 5, 6), g.edgesOf(1));
+        assertEquals(Set.of(1, 4, 5, 6), g.incomingEdgesOf(1));
+        assertEquals(Set.of(1, 4, 5, 6), g.outgoingEdgesOf(1));
 
         assertEquals(2, g.degreeOf(2));
         assertEquals(2, g.inDegreeOf(2));
         assertEquals(2, g.outDegreeOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(2, 6)), g.edgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(2, 6)), g.incomingEdgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(2, 6)), g.outgoingEdgesOf(2));
+        assertEquals(Set.of(2, 6), g.edgesOf(2));
+        assertEquals(Set.of(2, 6), g.incomingEdgesOf(2));
+        assertEquals(Set.of(2, 6), g.outgoingEdgesOf(2));
 
         assertEquals(0, g.degreeOf(3));
         assertEquals(0, g.inDegreeOf(3));
         assertEquals(0, g.outDegreeOf(3));
-        assertEquals(new HashSet<>(Arrays.asList()), g.edgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList()), g.incomingEdgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList()), g.outgoingEdgesOf(3));
+        assertEquals(Set.of(), g.edgesOf(3));
+        assertEquals(Set.of(), g.incomingEdgesOf(3));
+        assertEquals(Set.of(), g.outgoingEdgesOf(3));
 
         assertEquals(Integer.valueOf(0), g.getEdgeSource(0));
         assertEquals(Integer.valueOf(0), g.getEdgeTarget(0));
@@ -275,44 +275,44 @@ public class SparseIntGraphTest
         assertEquals(3, g.degreeOf(0));
         assertEquals(3, g.inDegreeOf(0));
         assertEquals(3, g.outDegreeOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 4)), g.edgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 4)), g.incomingEdgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 4)), g.outgoingEdgesOf(0));
+        assertEquals(Set.of(0, 1, 4), g.edgesOf(0));
+        assertEquals(Set.of(0, 1, 4), g.incomingEdgesOf(0));
+        assertEquals(Set.of(0, 1, 4), g.outgoingEdgesOf(0));
 
         assertEquals(3, g.degreeOf(1));
         assertEquals(3, g.inDegreeOf(1));
         assertEquals(3, g.outDegreeOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(3, 4, 5)), g.edgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(3, 4, 5)), g.incomingEdgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(3, 4, 5)), g.outgoingEdgesOf(1));
+        assertEquals(Set.of(3, 4, 5), g.edgesOf(1));
+        assertEquals(Set.of(3, 4, 5), g.incomingEdgesOf(1));
+        assertEquals(Set.of(3, 4, 5), g.outgoingEdgesOf(1));
 
         assertEquals(2, g.degreeOf(2));
         assertEquals(2, g.inDegreeOf(2));
         assertEquals(2, g.outDegreeOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(1, 6)), g.edgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(1, 6)), g.incomingEdgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(1, 6)), g.outgoingEdgesOf(2));
+        assertEquals(Set.of(1, 6), g.edgesOf(2));
+        assertEquals(Set.of(1, 6), g.incomingEdgesOf(2));
+        assertEquals(Set.of(1, 6), g.outgoingEdgesOf(2));
 
         assertEquals(2, g.degreeOf(3));
         assertEquals(2, g.inDegreeOf(3));
         assertEquals(2, g.outDegreeOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5)), g.edgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5)), g.incomingEdgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5)), g.outgoingEdgesOf(3));
+        assertEquals(Set.of(2, 5), g.edgesOf(3));
+        assertEquals(Set.of(2, 5), g.incomingEdgesOf(3));
+        assertEquals(Set.of(2, 5), g.outgoingEdgesOf(3));
 
         assertEquals(3, g.degreeOf(4));
         assertEquals(3, g.inDegreeOf(4));
         assertEquals(3, g.outDegreeOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 3, 6)), g.edgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 3, 6)), g.incomingEdgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 3, 6)), g.outgoingEdgesOf(4));
+        assertEquals(Set.of(2, 3, 6), g.edgesOf(4));
+        assertEquals(Set.of(2, 3, 6), g.incomingEdgesOf(4));
+        assertEquals(Set.of(2, 3, 6), g.outgoingEdgesOf(4));
 
         assertEquals(1, g.degreeOf(5));
         assertEquals(1, g.inDegreeOf(5));
         assertEquals(1, g.outDegreeOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.edgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.incomingEdgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.outgoingEdgesOf(5));
+        assertEquals(Set.of(0), g.edgesOf(5));
+        assertEquals(Set.of(0), g.incomingEdgesOf(5));
+        assertEquals(Set.of(0), g.outgoingEdgesOf(5));
 
         assertEquals(Integer.valueOf(0), g.getEdgeSource(0));
         assertEquals(Integer.valueOf(5), g.getEdgeTarget(0));
@@ -400,58 +400,58 @@ public class SparseIntGraphTest
         assertEquals(2, g.degreeOf(0));
         assertEquals(1, g.inDegreeOf(0));
         assertEquals(1, g.outDegreeOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1)), g.edgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(1)), g.incomingEdgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.outgoingEdgesOf(0));
+        assertEquals(Set.of(0, 1), g.edgesOf(0));
+        assertEquals(Set.of(1), g.incomingEdgesOf(0));
+        assertEquals(Set.of(0), g.outgoingEdgesOf(0));
 
         assertEquals(5, g.degreeOf(1));
         assertEquals(1, g.inDegreeOf(1));
         assertEquals(4, g.outDegreeOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 2, 3, 4)), g.edgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.incomingEdgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(1, 2, 3, 4)), g.outgoingEdgesOf(1));
+        assertEquals(Set.of(0, 1, 2, 3, 4), g.edgesOf(1));
+        assertEquals(Set.of(0), g.incomingEdgesOf(1));
+        assertEquals(Set.of(1, 2, 3, 4), g.outgoingEdgesOf(1));
 
         assertEquals(3, g.degreeOf(2));
         assertEquals(0, g.inDegreeOf(2));
         assertEquals(3, g.outDegreeOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(5, 6, 7)), g.edgesOf(2));
-        assertEquals(new HashSet<>(), g.incomingEdgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(5, 6, 7)), g.outgoingEdgesOf(2));
+        assertEquals(Set.of(5, 6, 7), g.edgesOf(2));
+        assertEquals(Set.of(), g.incomingEdgesOf(2));
+        assertEquals(Set.of(5, 6, 7), g.outgoingEdgesOf(2));
 
         assertEquals(1, g.degreeOf(3));
         assertEquals(0, g.inDegreeOf(3));
         assertEquals(1, g.outDegreeOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(8)), g.edgesOf(3));
-        assertEquals(new HashSet<>(), g.incomingEdgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(8)), g.outgoingEdgesOf(3));
+        assertEquals(Set.of(8), g.edgesOf(3));
+        assertEquals(Set.of(), g.incomingEdgesOf(3));
+        assertEquals(Set.of(8), g.outgoingEdgesOf(3));
 
         assertEquals(6, g.degreeOf(4));
         assertEquals(5, g.inDegreeOf(4));
         assertEquals(1, g.outDegreeOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5, 6, 7, 8, 9)), g.edgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5, 6, 7, 8)), g.incomingEdgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(9)), g.outgoingEdgesOf(4));
+        assertEquals(Set.of(2, 5, 6, 7, 8, 9), g.edgesOf(4));
+        assertEquals(Set.of(2, 5, 6, 7, 8), g.incomingEdgesOf(4));
+        assertEquals(Set.of(9), g.outgoingEdgesOf(4));
 
         assertEquals(3, g.degreeOf(5));
         assertEquals(2, g.inDegreeOf(5));
         assertEquals(1, g.outDegreeOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(3, 9, 10)), g.edgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(3, 9)), g.incomingEdgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(10)), g.outgoingEdgesOf(5));
+        assertEquals(Set.of(3, 9, 10), g.edgesOf(5));
+        assertEquals(Set.of(3, 9), g.incomingEdgesOf(5));
+        assertEquals(Set.of(10), g.outgoingEdgesOf(5));
 
         assertEquals(3, g.degreeOf(6));
         assertEquals(3, g.inDegreeOf(6));
         assertEquals(0, g.outDegreeOf(6));
-        assertEquals(new HashSet<>(Arrays.asList(4, 10, 11)), g.edgesOf(6));
-        assertEquals(new HashSet<>(Arrays.asList(4, 10, 11)), g.incomingEdgesOf(6));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf(6));
+        assertEquals(Set.of(4, 10, 11), g.edgesOf(6));
+        assertEquals(Set.of(4, 10, 11), g.incomingEdgesOf(6));
+        assertEquals(Set.of(), g.outgoingEdgesOf(6));
 
         assertEquals(3, g.degreeOf(7));
         assertEquals(1, g.inDegreeOf(7));
         assertEquals(2, g.outDegreeOf(7));
-        assertEquals(new HashSet<>(Arrays.asList(11, 12)), g.edgesOf(7));
-        assertEquals(new HashSet<>(Arrays.asList(12)), g.incomingEdgesOf(7));
-        assertEquals(new HashSet<>(Arrays.asList(11, 12)), g.outgoingEdgesOf(7));
+        assertEquals(Set.of(11, 12), g.edgesOf(7));
+        assertEquals(Set.of(12), g.incomingEdgesOf(7));
+        assertEquals(Set.of(11, 12), g.outgoingEdgesOf(7));
 
         assertEquals(Integer.valueOf(0), g.getEdgeSource(0));
         assertEquals(Integer.valueOf(1), g.getEdgeTarget(0));
@@ -491,27 +491,27 @@ public class SparseIntGraphTest
         assertFalse(type.isWeighted());
 
         assertEquals(Integer.valueOf(0), g.getEdge(0, 1));
-        assertEquals(Collections.singleton(Integer.valueOf(0)), g.getAllEdges(0, 1));
+        assertEquals(Set.of(0), g.getAllEdges(0, 1));
         assertEquals(Integer.valueOf(1), g.getEdge(1, 0));
-        assertEquals(Collections.singleton(Integer.valueOf(1)), g.getAllEdges(1, 0));
+        assertEquals(Set.of(1), g.getAllEdges(1, 0));
         assertEquals(Integer.valueOf(2), g.getEdge(1, 4));
-        assertEquals(Collections.singleton(Integer.valueOf(2)), g.getAllEdges(1, 4));
+        assertEquals(Set.of(2), g.getAllEdges(1, 4));
         assertEquals(Integer.valueOf(3), g.getEdge(1, 5));
-        assertEquals(Collections.singleton(Integer.valueOf(3)), g.getAllEdges(1, 5));
+        assertEquals(Set.of(3), g.getAllEdges(1, 5));
         assertEquals(Integer.valueOf(4), g.getEdge(1, 6));
-        assertEquals(Collections.singleton(Integer.valueOf(4)), g.getAllEdges(1, 6));
+        assertEquals(Set.of(4), g.getAllEdges(1, 6));
         assertEquals(Integer.valueOf(5), g.getEdge(2, 4));
-        assertEquals(new HashSet<>(Arrays.asList(5, 6, 7)), g.getAllEdges(2, 4));
+        assertEquals(Set.of(5, 6, 7), g.getAllEdges(2, 4));
         assertEquals(Integer.valueOf(8), g.getEdge(3, 4));
-        assertEquals(Collections.singleton(Integer.valueOf(8)), g.getAllEdges(3, 4));
+        assertEquals(Set.of(8), g.getAllEdges(3, 4));
         assertEquals(Integer.valueOf(9), g.getEdge(4, 5));
-        assertEquals(Collections.singleton(Integer.valueOf(9)), g.getAllEdges(4, 5));
+        assertEquals(Set.of(9), g.getAllEdges(4, 5));
         assertEquals(Integer.valueOf(10), g.getEdge(5, 6));
-        assertEquals(Collections.singleton(Integer.valueOf(10)), g.getAllEdges(5, 6));
+        assertEquals(Set.of(10), g.getAllEdges(5, 6));
         assertEquals(Integer.valueOf(11), g.getEdge(7, 6));
-        assertEquals(Collections.singleton(Integer.valueOf(11)), g.getAllEdges(7, 6));
+        assertEquals(Set.of(11), g.getAllEdges(7, 6));
         assertEquals(Integer.valueOf(12), g.getEdge(7, 7));
-        assertEquals(Collections.singleton(Integer.valueOf(12)), g.getAllEdges(7, 7));
+        assertEquals(Set.of(12), g.getAllEdges(7, 7));
 
     }
 
@@ -547,58 +547,58 @@ public class SparseIntGraphTest
         assertEquals(2, g.degreeOf(0));
         assertEquals(1, g.inDegreeOf(0));
         assertEquals(1, g.outDegreeOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1)), g.edgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(1)), g.incomingEdgesOf(0));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.outgoingEdgesOf(0));
+        assertEquals(Set.of(0, 1), g.edgesOf(0));
+        assertEquals(Set.of(1), g.incomingEdgesOf(0));
+        assertEquals(Set.of(0), g.outgoingEdgesOf(0));
 
         assertEquals(5, g.degreeOf(1));
         assertEquals(1, g.inDegreeOf(1));
         assertEquals(4, g.outDegreeOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 2, 3, 4)), g.edgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(0)), g.incomingEdgesOf(1));
-        assertEquals(new HashSet<>(Arrays.asList(1, 2, 3, 4)), g.outgoingEdgesOf(1));
+        assertEquals(Set.of(0, 1, 2, 3, 4), g.edgesOf(1));
+        assertEquals(Set.of(0), g.incomingEdgesOf(1));
+        assertEquals(Set.of(1, 2, 3, 4), g.outgoingEdgesOf(1));
 
         assertEquals(3, g.degreeOf(2));
         assertEquals(0, g.inDegreeOf(2));
         assertEquals(3, g.outDegreeOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(5, 6, 7)), g.edgesOf(2));
-        assertEquals(new HashSet<>(), g.incomingEdgesOf(2));
-        assertEquals(new HashSet<>(Arrays.asList(5, 6, 7)), g.outgoingEdgesOf(2));
+        assertEquals(Set.of(5, 6, 7), g.edgesOf(2));
+        assertEquals(Set.of(), g.incomingEdgesOf(2));
+        assertEquals(Set.of(5, 6, 7), g.outgoingEdgesOf(2));
 
         assertEquals(1, g.degreeOf(3));
         assertEquals(0, g.inDegreeOf(3));
         assertEquals(1, g.outDegreeOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(8)), g.edgesOf(3));
-        assertEquals(new HashSet<>(), g.incomingEdgesOf(3));
-        assertEquals(new HashSet<>(Arrays.asList(8)), g.outgoingEdgesOf(3));
+        assertEquals(Set.of(8), g.edgesOf(3));
+        assertEquals(Set.of(), g.incomingEdgesOf(3));
+        assertEquals(Set.of(8), g.outgoingEdgesOf(3));
 
         assertEquals(6, g.degreeOf(4));
         assertEquals(5, g.inDegreeOf(4));
         assertEquals(1, g.outDegreeOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5, 6, 7, 8, 9)), g.edgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(2, 5, 6, 7, 8)), g.incomingEdgesOf(4));
-        assertEquals(new HashSet<>(Arrays.asList(9)), g.outgoingEdgesOf(4));
+        assertEquals(Set.of(2, 5, 6, 7, 8, 9), g.edgesOf(4));
+        assertEquals(Set.of(2, 5, 6, 7, 8), g.incomingEdgesOf(4));
+        assertEquals(Set.of(9), g.outgoingEdgesOf(4));
 
         assertEquals(3, g.degreeOf(5));
         assertEquals(2, g.inDegreeOf(5));
         assertEquals(1, g.outDegreeOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(3, 9, 10)), g.edgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(3, 9)), g.incomingEdgesOf(5));
-        assertEquals(new HashSet<>(Arrays.asList(10)), g.outgoingEdgesOf(5));
+        assertEquals(Set.of(3, 9, 10), g.edgesOf(5));
+        assertEquals(Set.of(3, 9), g.incomingEdgesOf(5));
+        assertEquals(Set.of(10), g.outgoingEdgesOf(5));
 
         assertEquals(3, g.degreeOf(6));
         assertEquals(3, g.inDegreeOf(6));
         assertEquals(0, g.outDegreeOf(6));
-        assertEquals(new HashSet<>(Arrays.asList(4, 10, 11)), g.edgesOf(6));
-        assertEquals(new HashSet<>(Arrays.asList(4, 10, 11)), g.incomingEdgesOf(6));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf(6));
+        assertEquals(Set.of(4, 10, 11), g.edgesOf(6));
+        assertEquals(Set.of(4, 10, 11), g.incomingEdgesOf(6));
+        assertEquals(Set.of(), g.outgoingEdgesOf(6));
 
         assertEquals(3, g.degreeOf(7));
         assertEquals(1, g.inDegreeOf(7));
         assertEquals(2, g.outDegreeOf(7));
-        assertEquals(new HashSet<>(Arrays.asList(11, 12)), g.edgesOf(7));
-        assertEquals(new HashSet<>(Arrays.asList(12)), g.incomingEdgesOf(7));
-        assertEquals(new HashSet<>(Arrays.asList(11, 12)), g.outgoingEdgesOf(7));
+        assertEquals(Set.of(11, 12), g.edgesOf(7));
+        assertEquals(Set.of(12), g.incomingEdgesOf(7));
+        assertEquals(Set.of(11, 12), g.outgoingEdgesOf(7));
 
         assertEquals(Integer.valueOf(0), g.getEdgeSource(0));
         assertEquals(Integer.valueOf(1), g.getEdgeTarget(0));
@@ -657,27 +657,27 @@ public class SparseIntGraphTest
         assertFalse(type.isMixed());
 
         assertEquals(Integer.valueOf(0), g.getEdge(0, 1));
-        assertEquals(Collections.singleton(Integer.valueOf(0)), g.getAllEdges(0, 1));
+        assertEquals(Set.of(0), g.getAllEdges(0, 1));
         assertEquals(Integer.valueOf(1), g.getEdge(1, 0));
-        assertEquals(Collections.singleton(Integer.valueOf(1)), g.getAllEdges(1, 0));
+        assertEquals(Set.of(1), g.getAllEdges(1, 0));
         assertEquals(Integer.valueOf(2), g.getEdge(1, 4));
-        assertEquals(Collections.singleton(Integer.valueOf(2)), g.getAllEdges(1, 4));
+        assertEquals(Set.of(2), g.getAllEdges(1, 4));
         assertEquals(Integer.valueOf(3), g.getEdge(1, 5));
-        assertEquals(Collections.singleton(Integer.valueOf(3)), g.getAllEdges(1, 5));
+        assertEquals(Set.of(3), g.getAllEdges(1, 5));
         assertEquals(Integer.valueOf(4), g.getEdge(1, 6));
-        assertEquals(Collections.singleton(Integer.valueOf(4)), g.getAllEdges(1, 6));
+        assertEquals(Set.of(4), g.getAllEdges(1, 6));
         assertEquals(Integer.valueOf(5), g.getEdge(2, 4));
-        assertEquals(new HashSet<>(Arrays.asList(5, 6, 7)), g.getAllEdges(2, 4));
+        assertEquals(Set.of(5, 6, 7), g.getAllEdges(2, 4));
         assertEquals(Integer.valueOf(8), g.getEdge(3, 4));
-        assertEquals(Collections.singleton(Integer.valueOf(8)), g.getAllEdges(3, 4));
+        assertEquals(Set.of(8), g.getAllEdges(3, 4));
         assertEquals(Integer.valueOf(9), g.getEdge(4, 5));
-        assertEquals(Collections.singleton(Integer.valueOf(9)), g.getAllEdges(4, 5));
+        assertEquals(Set.of(9), g.getAllEdges(4, 5));
         assertEquals(Integer.valueOf(10), g.getEdge(5, 6));
-        assertEquals(Collections.singleton(Integer.valueOf(10)), g.getAllEdges(5, 6));
+        assertEquals(Set.of(10), g.getAllEdges(5, 6));
         assertEquals(Integer.valueOf(11), g.getEdge(7, 6));
-        assertEquals(Collections.singleton(Integer.valueOf(11)), g.getAllEdges(7, 6));
+        assertEquals(Set.of(11), g.getAllEdges(7, 6));
         assertEquals(Integer.valueOf(12), g.getEdge(7, 7));
-        assertEquals(Collections.singleton(Integer.valueOf(12)), g.getAllEdges(7, 7));
+        assertEquals(Set.of(12), g.getAllEdges(7, 7));
 
     }
 
